Large image on Twitter

--- a/templates/bumf.html
+++ b/templates/bumf.html
@@ -5,7 +5,7 @@
 
         <meta name="description" content="{% if og_description %}{{og_description}}{% else %}Before you vote, look at their CVs! This site helps MP candidates share their CV with voters.{% endif %}" />
 
-        <meta name="twitter:card" value="summary">
+        <meta name="twitter:card" value="summary_large_image">
         <meta name="twitter:site" content="@democlubcvs">
         <meta name="twitter:title" content="{{ self.title() }} - Democracy Club CVs">
         <meta name="twitter:description" content="{% if og_description %}{{og_description}}{% else %}Before you vote, look at their CVs! This site helps MP candidates share their CV with voters.{% endif %}">
