Link to Twitter feed

--- a/templates/about.html
+++ b/templates/about.html
@@ -65,9 +65,13 @@
     <p class="lead"><a href="mailto:cv@democracyclub.org.uk">cv@democracyclub.org.uk</a>
 
     <h2>Media queries</h2>
-
     <p class=lead">07970 543358</p>
+
+    <h2>Follow new CVs</h2>
+    <p class="lead"> <a href="https://twitter.com/democlubcvs">@democlubcvs</a></p>
 
     <h2>Source code</h2>
     <p class="lead"> <a href="https://github.com/frabcus/mpcv">frabcus/mpcv</a></p>
+
+
 {% endblock  %}
