--- a/templates/bumf.html
+++ b/templates/bumf.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>{% block title %}{% endblock %} - Democracy Club CVs</title>
+        <title>
+            {% if request.path == "/" %}
+                Democracy Club CVs - {% block title %}{% endblock %}
+            {% else %}
+                {{ self.title() }} - Democracy Club CVs
+            {% endif %}
+        </title>
 
         <meta name="description" content="{% if og_description %}{{og_description}}{% else %}Before you vote, look at their CVs! This site helps MP candidates share their CV with voters.{% endif %}" />
 
