--- a/templates/tweet_candidates.html
+++ b/templates/tweet_candidates.html
@@ -12,7 +12,7 @@
             {% if candidate.twitter %}
                <h2>{{ candidate.name }} <span class="party">{{ candidate.party }}</span></h2>
                 <p>
-                    <a class="btn btn-info btn-lg tweet" title=".@{{ candidate.twitter }} I'd love to see your CV before I vote, could you upload it here?" href="http://cv.democracyclub.org.uk/upload_cv/{{ candidate.id }}" data-hashtags="ge2015,mpcv" data-via="democlub" data-related="{{ candidate.twitter }}">
+                    <a x-person-id="{{ candidate.id }}" class="btn btn-info btn-lg tweet" href="https://twitter.com/intent/tweet?url=http://cv.democracyclub.org.uk/upload_cv/{{ candidate.id }}&hashtags=ge2015,mpcv&via=democlub&text={{ '.@' + candidate.twitter + ' I\'d love to see your CV before I vote, could you upload it here?'|urlencode}}&related={{ candidate.twitter }}">
                         Tweet @{{ candidate.twitter }}
                     </a>
                 </p>
@@ -24,4 +24,22 @@
         </p>
 
    </div>
+
+   <script>window.twttr = (function(d, s, id) {
+     var js, fjs = d.getElementsByTagName(s)[0],
+       t = window.twttr || {};
+     if (d.getElementById(id)) return t;
+     js = d.createElement(s);
+     js.id = id;
+     js.src = "https://platform.twitter.com/widgets.js";
+     fjs.parentNode.insertBefore(js, fjs);
+    
+     t._e = [];
+     t.ready = function(f) {
+       t._e.push(f);
+     };
+    
+     return t;
+   }(document, "script", "twitter-wjs"));</script>
+
 {% endblock %}
