Remove "MP Candidate" text from mid size

--- a/templates/show_cv.html
+++ b/templates/show_cv.html
@@ -66,7 +66,7 @@
                 {{ candidate.party }}
              </span>
              <span class="hidden-lg hidden-md visible-sm-block hidden-xs">
-                MP Candidate, {{ candidate.party }}
+                {{ candidate.party }}
              </span>
              <span class="hidden-lg hidden-md hidden-sm visible-xs-block">
                 {{ candidate.constituency_name }}, MP Candidate, {{ candidate.party }}
