Generalise follow text

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {% block title %} About {% endblock %}
+
 {% block body %}
     <div id="about">
 
@@ -61,17 +62,17 @@
 {% endblock %}
 
 {% block sidebar %}
+
     <h2>Contact us</h2>
     <p class="lead"><a href="mailto:cv@democracyclub.org.uk">cv@democracyclub.org.uk</a>
+
+    <h2>Follow us</h2>
+    <p class="lead"> <a href="https://twitter.com/democlubcvs">@democlubcvs</a></p>
 
     <h2>Media queries</h2>
     <p class=lead">07970 543358</p>
 
-    <h2>Follow new CVs</h2>
-    <p class="lead"> <a href="https://twitter.com/democlubcvs">@democlubcvs</a></p>
-
     <h2>Source code</h2>
     <p class="lead"> <a href="https://github.com/frabcus/mpcv">frabcus/mpcv</a></p>
-
 
 {% endblock  %}
