Add some sort of YNMP attribution

--- a/templates/about.html
+++ b/templates/about.html
@@ -44,9 +44,10 @@
         <p>The <a href="http://www.theguardian.com/politics/blog/2010/may/04/general-election-2010">original idea</a> was Julian Todd's.
         <a href="http://flourish.org/">Francis Irving</a> made it, helped by
         <a href="http://treadsoft.ly/">Andy Lulham</a> and <a href="https://github.com/frabcus/mpcv/graphs/contributors">others</a>.
-        It's part of the non-profit <a href="https://democracyclub.org.uk/about/">Democracy Club</a>.
+        It's part of the non-profit <a href="https://democracyclub.org.uk/about/">Democracy Club</a>,
+        and uses data provided by [YourNextMP.com](https://yournextmp.com/).
         </p>
-        
+
         <h2>How can I help?</h2>
 
         <p>If you'd like to help market this site, or handle customer support,
