Change title and social sharing on /upload_cv

--- a/templates/upload_cv.html
+++ b/templates/upload_cv.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %} Confirm email of {{ candidate.name }} {% endblock %}
+{% block title %} {{ candidate.name }}, share your CV! {% endblock %}
 {% block body %}
     <div id="upload_cv">
 
