First version of constituency pages

--- a/templates/email_candidates.html
+++ b/templates/email_candidates.html
@@ -5,7 +5,7 @@
 
         <h1>Ask candidates to share their CV</h1>
 
-        <form class="form-horizontal button-disabling-form" action="/email_candidates" method="POST">
+        <form class="form-horizontal button-disabling-form" action="/email_candidates/{{ constituency.id }}" method="POST">
             <div class="form-group">
                 <label class="col-sm-3 control-label" for="to">To</label>
                 <div class="col-sm-9">
@@ -17,13 +17,6 @@
               <label for="from_email" class="col-sm-3 control-label">From email</label>
               <div class="col-sm-6">
                   <input id="from_email" name="from_email" type="email" value="{{from_email}}" class="form-control" {% if not from_email %}autofocus{% endif %}>
-              </div>
-            </div>
-
-            <div class="form-group">
-              <label for="postcode" class="col-sm-3 control-label">Postcode</label>
-              <div class="col-sm-9">
-                  <p class="form-control-static">{{ postcode }}</p>
               </div>
             </div>
 
