--- a/templates/layout.html
+++ b/templates/layout.html
@@ -27,10 +27,10 @@
           </p>
 
           <ul class="nav navbar-nav navbar-right">
-            {% if request.path == "/candidates" %}
+            {% if constituency and g.constituency and g.constituency['id'] == constituency.id %}
                 <li> <a href="/">Change constituency</a> </li>
             {% elif g.constituency %}
-                <li> <a href="/candidates">My constituency</a> </li>
+                <li> <a href="/candidates/{{g.constituency.id}}">My constituency</a> </li>
             {% elif request.path != "/" %}
                 <li> <a href="/">Choose constituency</a> </li>
             {% endif %}
