--- a/templates/tweet_candidates.html
+++ b/templates/tweet_candidates.html
@@ -20,7 +20,7 @@
         {% endfor %}
 
         <p>
-            <a href="/candidates?show_subscribe=1" class="done-button btn btn-lg btn-success">Done all</a>
+        <a href="/candidates/{{ constituency.id }}?show_subscribe=1" class="done-button btn btn-lg btn-success">Done all</a>
         </p>
 
    </div>
