About page is in HTML not markdown

--- a/templates/about.html
+++ b/templates/about.html
@@ -45,7 +45,7 @@
         <a href="http://flourish.org/">Francis Irving</a> made it, helped by
         <a href="http://treadsoft.ly/">Andy Lulham</a> and <a href="https://github.com/frabcus/mpcv/graphs/contributors">others</a>.
         It's part of the non-profit <a href="https://democracyclub.org.uk/about/">Democracy Club</a>,
-        and uses data provided by [YourNextMP.com](https://yournextmp.com/).
+        and uses data provided by <a href="https://yournextmp.com">YourNextMP</a>.
         </p>
 
         <h2>How can I help?</h2>
