Remove pagination from /all
Add choice of thumbnail size

--- a/templates/all_cvs.html
+++ b/templates/all_cvs.html
@@ -5,48 +5,42 @@
     
     <div id="all_cvs">
 
+        <div class="pull-right btn-toolbar" role="toolbar">
+<!--            <div class="btn-group" role="group">
+                <a href="{{ url_for("all_cvs", view="recent", size=size) }}"
+                class="{% if size == 'small' %}active disabled {% endif %}btn btn-default" title="Recent CVs">
+                  <span class="glyphicon glyphicon-sort-by-order" aria-hidden="true"></span>
+                </a>
+            </div> -->
+
+            <div class="btn-group" role="group">
+                <a href="{{ url_for("all_cvs", view=view, size="large") }}"
+                class="{% if size == 'large' %}active disabled {% endif %}btn btn-default" title="Large thumbnails">
+                  <span class="glyphicon glyphicon-th-large" aria-hidden="true"></span>
+                </a>
+
+                <a href="{{ url_for("all_cvs", view=view, size="small") }}"
+                class="{% if size == 'small' %}active disabled {% endif %}btn btn-default" title="Small thumbnails">
+                  <span class="glyphicon glyphicon-th" aria-hidden="true"></span>
+                </a>
+            </div>
+        </div>
+
+
         <h1>All CVs</h1>
 
         <div class="row">
-            {% for cv in page_cvs %}
-                <div class="col-md-3 col-xs-6">
+            {% for cv in cvs %}
+                {% if size == 'large' %}
+                <div class="col-md-3 col-sm-4 col-xs-6">
+                {% elif size == 'small' %}
+                <div class="col-lg-1 col-sm-2 col-xs-3">
+                {% endif %}
                      {% import 'embed_cv.html' as embed_cv %}
                     {{ embed_cv.embed_cv(cv, full_page_link=True) }} 
                 </div>
             {% endfor %}
         </div>
-
-        <nav class="text-center">
-          <ul class="pagination">
-            {% if page == 1 %}
-                <li class="disabled"> <a href="#" aria-label="Previous"> <span aria-hidden="true">&laquo;</span> </a> </li>
-            {% else %}
-                <li> <a href="{{ page - 1 }}" aria-label="Previous"> <span aria-hidden="true">&laquo;</span> </a> </li>
-            {% endif %}
-
-            {% if page > 3000 %}
-            <li class="disabled"> <a href="#">...</a> </li>
-            {% endif %}
-
-            {% for n in numbers %}
-                {% if n == page %}
-                    <li class="disabled"><a href="#">{{ page }}</a></li>
-                {% else %}
-                    <li><a href="{{ n }}">{{ n }}</a></li>
-                {% endif %}
-            {% endfor %}
-
-            {% if page < max_page - 3000 %}
-            <li class="disabled"> <a href="#">...</a> </li>
-            {% endif %}
-
-            {% if page == max_page %}
-                <li class="disabled"> <a href="#" aria-label="Next"> <span aria-hidden="true">&raquo;</span> </a> </li>
-            {% else %}
-                <li> <a href="{{ page + 1 }}" aria-label="Next"> <span aria-hidden="true">&raquo;</span> </a> </li>
-            {% endif %}
-          </ul>
-        </nav>
 
     </div>
 
