--- a/templates/all_cvs.html
+++ b/templates/all_cvs.html
@@ -6,12 +6,17 @@
     <div id="all_cvs">
 
         <div class="pull-right btn-toolbar" role="toolbar">
-<!--            <div class="btn-group" role="group">
+            <div class="btn-group" role="group">
                 <a href="{{ url_for("all_cvs", view="recent", size=size) }}"
-                class="{% if size == 'small' %}active disabled {% endif %}btn btn-default" title="Recent CVs">
+                class="{% if view == 'recent' %}active disabled {% endif %}btn btn-default" title="Recent CVs">
                   <span class="glyphicon glyphicon-sort-by-order" aria-hidden="true"></span>
                 </a>
-            </div> -->
+                <a href="{{ url_for("all_cvs", view="alphabet", size=size) }}"
+                class="{% if view == 'alphabet' %}active disabled {% endif %}btn btn-default" title="Alphabetical by constituency">
+                  <span class="glyphicon glyphicon-sort-by-alphabet" aria-hidden="true"></span>
+                </a>
+
+            </div>
 
             <div class="btn-group" role="group">
                 <a href="{{ url_for("all_cvs", view=view, size="large") }}"
@@ -23,24 +28,48 @@
                 class="{% if size == 'small' %}active disabled {% endif %}btn btn-default" title="Small thumbnails">
                   <span class="glyphicon glyphicon-th" aria-hidden="true"></span>
                 </a>
+
             </div>
         </div>
 
 
-        <h1>All CVs</h1>
+        {% if cvs %}
+            <h1>Recent CVs</h1>
 
-        <div class="row">
-            {% for cv in cvs %}
-                {% if size == 'large' %}
-                <div class="col-md-3 col-sm-4 col-xs-6">
-                {% elif size == 'small' %}
-                <div class="col-lg-1 col-sm-2 col-xs-3">
-                {% endif %}
-                     {% import 'embed_cv.html' as embed_cv %}
-                    {{ embed_cv.embed_cv(cv, full_page_link=True) }} 
-                </div>
+            <div class="row">
+                {% for cv in cvs %}
+                    {% if size == 'large' %}
+                    <div class="col-md-3 col-sm-4 col-xs-6">
+                    {% elif size == 'small' %}
+                    <div class="col-lg-1 col-sm-2 col-xs-3">
+                    {% endif %}
+                         {% import 'embed_cv.html' as embed_cv %}
+                        {{ embed_cv.embed_cv(cv, full_page_link=True) }} 
+                    </div>
+                {% endfor %}
+            </div>
+        {% endif%}
+
+        {% if constituencies %}
+            <h1>Constituencies</h1>
+
+            {% for candidates in constituencies %}
+                    <h2><a href="/candidates/{{candidates[0].constituency_id}}">{{ candidates[0].constituency_name }}</a></h2>
+                    <div class="row">
+                    {% for candidate in candidates %}
+                        <div class="col-xs-12 col-md-6 col-lg-5">
+                            <span class="whole_name">
+                                {% if candidate.has_cv %}<a href="/show_cv/{{candidate.id}}">{% endif %}
+                                <span class="name">{{ candidate.name}}</span> 
+                                {% if candidate.has_cv %}</a>{% endif %}
+                                <span class="party">{{ candidate.party}}</span>
+                            </span>
+                        </div>
+                    {% endfor %}
+                    </div>
             {% endfor %}
-        </div>
+        {% endif%}
+
 
     </div>
 
