--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
         </div>
 
         <p id="all_cvs_link">
-            <a href="/all_cvs/recent/large">Browse all CVs&hellip;</a>
+            <a href="/all_cvs/recent/medium">Browse all CVs&hellip;</a>
         </p>
 
     </div>
