--- a/templates/index.html
+++ b/templates/index.html
@@ -38,8 +38,8 @@
             {% endfor %}
         </div>
 
-        <p id="all_cvs_link">
-            <a href="/all_cvs/recent/medium">Browse all CVs&hellip;</a>
+        <p id="browse_link">
+            <a href="/browse/recent/medium">Browse all CVs&hellip;</a>
         </p>
 
     </div>
