--- a/static/style.css
+++ b/static/style.css
@@ -73,6 +73,21 @@ footer ul.pull-right li:last-child {
 }
 
 
+#browse .nav-pills {
+    margin-top: -21px;
+    margin-bottom: 21px;
+}
+
+@media (min-width: 768px) {
+  #browse .btn-toolbar, #browse .nav-pills {
+    float: right !important;
+  }
+  #browse .nav-pills {
+    margin-top: 21px;
+  }
+}
+
+
 /* / */
 
 #front .lead {
