--- a/templates/email_candidates.html
+++ b/templates/email_candidates.html
@@ -1,70 +1,82 @@
 {% extends "layout.html" %}
 {% block title %} Email {{ constituency.name }} candidates {% endblock %}
-{% block body %}
+{% block wide %}
     <div id="email_candidates">
 
         <h1>Email {{ constituency.name}} candidates</h1>
 
-        <p class="lead">Ask them to share their CV. <a href="/" class="not_me">I vote somewhere else</a>. </p>
-
         <form class="form-horizontal button-disabling-form" action="/email_candidates/{{ constituency.id }}" method="POST">
-            <div class="form-group">
-                <label class="col-sm-3 control-label" for="to">To</label>
-                <div class="col-sm-9">
-                    <p class="form-control-static">{{ emails_list }}</p>
+            <div class="row">
+                <div class="col-md-7">
+                    <div class="form-group">
+                        <label class="col-sm-3 control-label" for="to">To</label>
+                        <div class="col-sm-9">
+                            <p class="form-control-static">{{ emails_list }}</p>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                      <label for="from_email" class="col-sm-3 control-label">Your email</label>
+                      <div class="col-sm-6">
+                          <input id="from_email" name="from_email" type="email" value="{{from_email}}" class="form-control" {% if not from_email %}autofocus{% endif %}>
+                      </div>
+                    </div>
+
+                    <div class="form-group">
+                      <label for="subject" class="col-sm-3 control-label">Subject</label>
+                      <div class="col-sm-9">
+                          <input id="subject" name="subject" value="{{subject}}" {% if from_email and not subject %}autofocus{% endif %} class="form-control">
+                      </div>
+                    </div>
+                </div>
+                <div class="col-md-1">
+                </div>
+
+                <div class="col-md-4">
                 </div>
             </div>
 
-            <div class="form-group">
-              <label for="from_email" class="col-sm-3 control-label">From email</label>
-              <div class="col-sm-6">
-                  <input id="from_email" name="from_email" type="email" value="{{from_email}}" class="form-control" {% if not from_email %}autofocus{% endif %}>
-              </div>
-            </div>
+            <div class="row">
+                <div class="col-md-7">
+                    <div class="form-group">
 
-            <div class="form-group">
-              <label for="subject" class="col-sm-3 control-label">Subject</label>
-              <div class="col-sm-9">
-                  <input id="subject" name="subject" value="{{subject}}" class="form-control">
-              </div>
-            </div>
+                        <label class="col-sm-3 control-label" for="message">Message</label>
+                        <div class="col-sm-9">
+                            <p class="form-control-static dear-message">Dear {{ names_list }},</p>
+                            <textarea id="message" name="message" class="form-control" rows=14 autofocus>{{ message }}</textarea>
+                        </div>
+                    </div>
 
-            <div class="form-group">
-                <label class="col-sm-3 control-label" for="message">Message</label>
-                <div class="col-sm-9">
-                    <p class="form-control-static dear-message">Dear {{ names_list }},</p>
-                    <textarea id="message" name="message" class="form-control" rows=10 autofocus>{{ message }}</textarea>
-                    <p class="help-block visible-lg-block visible-md-block hidden-sm hidden-xs">
-                        Want some ideas for your letter? See the tips to the right.
+
+                    <div class="form-group">
+                        <div class="col-sm-3">
+                        </div>
+                        <div class="col-sm-9">
+                            <button type="submit" class="btn btn-success btn-lg" id="send-emails" data-loading-text="Sending...">Send emails</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-1">
+                </div>
+
+                <div class="col-md-4">
+                    <h2>Writing an effective mail</h2>
+
+                    <p>1. Think of an intriguing subject that will encourage them to open it, and make it clear you're local.
+                    (<a href="/">I'm not local</a>)
                     </p>
-                    <p class="help-block hidden-lg hidden-md visible-sm-block visible-xs-block">
-                        Want some ideas for your letter? See the tips below.
-                    </p>
-
+                     <p>2. Edit the introduction to say more about yourself, <strong>making it clear you're in their constituency</strong>.</p>
+                     <p>3. <strong>Say something unique</strong> about why you want their CV. 
+                     <p>4. <strong>Sign off with your address</strong>, so they can see you're really from their constituency.</p>
                 </div>
             </div>
 
-
-            <div class="form-group">
-                <div class="col-sm-3">
-                </div>
-                <div class="col-sm-9">
-                    <button type="submit" class="btn btn-success btn-lg" id="send-emails" data-loading-text="Sending...">Send emails</button>
-                </div>
-            </div>
         </form>
+        </div>
+
 
     </div>
 {% endblock %}
 {% block sidebar %}
-
-    <h1>Writing an effective mail</h1>
-
-     <p class="lead">1. Think of an intriguing subject that will encourage them to open it, and make it clear you're local.</p>
-     <p>2. Introduce yourself, <strong>making it clear you're in their constituency</strong> (<em>{{constituency.name}}</em>).</p>
-     <p>3. Tell them you've been looking at candidate's CVs on Democracy Club. Tell them why you think it's important they upload theirs. </p>
-     <!-- <p>Tell them that <strong></strong> candidates have answered it already, and that in <em>{{constituency.name}}</em> -->
-     <p>4. Finish by telling them there's a link at the bottom of the email to upload their CV, and say thank you! (we automatically add the link to your email after you press 'send')</p>
-     <p>5. <strong>Sign off with your address</strong>, so they can see you're really from their constituency.</p>
 
 {% endblock %}
